# namelesslibc

./: .gitmodules  NOTICE.md  README.md
libk/: CMakeLists.txt
libk/include/libk/: ctype.h  stdlib.h  string.h
libk/src/: ctype.c  stdlib.c  string.c
libk/tests/: CMakeLists.txt  main.c  test_ctype.h  test_stdlib.h  test_string.c  test_string.h
